<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/gray">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/label1"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/green"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/label1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/green"
            android:textSize="11sp"
            />
        <EditText
            android:id="@+id/emailText"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/you_example_com"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/green"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="11sp"
            android:textColor="@color/green"
            />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordText"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:backgroundTint="@color/green"
            tools:ignore="WearPasswordInput" />

    </LinearLayout>
    <Button
        android:id="@+id/buttonEnter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>