<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FormFragment"
    android:background="@color/gray">

    <TextView
        android:id="@+id/label2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <LinearLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/taskLabel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:textColorHint="@color/black"
            android:hint="@string/task_name"
            />
        <EditText
            android:id="@+id/taskDescription"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:hint="@string/task_description"
            android:textColorHint="@color/black"
            />
    </LinearLayout>
    <Button
        android:id="@+id/savetaskButton"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>