<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TasksFragment"
    android:background="@color/gray">
    <Button
        android:id="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/green_back"
        android:text="@string/back"
        android:layout_margin="5dp"
        />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/label3"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/tasks"
        android:textColor="@color/green"
        />
    <ScrollView
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center"
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </ScrollView>

    <Button
        android:id="@+id/buttonRemoveDone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/delete_completed"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>